--- a/.github/workflows/release-changelog.yml
+++ b/.github/workflows/release-changelog.yml
@@ -2,7 +2,7 @@ name: Release Changelog Notification
 
 on:
   pull_request:
-    types: [ opened ]
+    types: [ opened, push ]
 
 jobs:
   deployment_notification:
@@ -13,5 +13,5 @@ jobs:
         uses: thollander/actions-comment-pull-request@master
         with:
           message: |
-            Hi
+            Hi 2
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
