--- a/.github/workflows/release-changelog.yml
+++ b/.github/workflows/release-changelog.yml
@@ -2,8 +2,9 @@ name: Release Changelog Notification
 
 on:
   pull_request:
-    types: [ opened, edited ]
-  issue_commented:
+    types: [ opened ]
+  pull_request_review:
+    types: [edited, dismissed]
 
 jobs:
   deployment_notification:
