--- a/.github/workflows/release-changelog.yml
+++ b/.github/workflows/release-changelog.yml
@@ -2,18 +2,24 @@ name: Release Changelog Notification
 
 on:
   pull_request:
-    types: [ opened, edited, labeled ]
-  pull_request_review:
-    types: [ edited, dismissed ]
+    types: [ opened, edited ]
 
 jobs:
   deployment_notification:
-    runs-on: ubuntu-latest
-    name: Release Changelog Notification
-    steps:
-      - name: Comment PR
-        uses: thollander/actions-comment-pull-request@master
-        with:
-          message: |
-            Hi 2
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Find Comment
+      uses: peter-evans/find-comment@v1
+      id: fc
+      with:
+        issue-number: ${{ github.event.pull_request.number }}
+        comment-author: 'github-actions[bot]'
+        body-includes: Build output
+
+    - name: Create or update comment
+      uses: peter-evans/create-or-update-comment@v1
+      with:
+        comment-id: ${{ steps.fc.outputs.comment-id }}
+        issue-number: ${{ github.event.pull_request.number }}
+        body: |
+          Build output
+          ${{ steps.build.outputs.build-log }}
+        edit-mode: replace
