--- a/.github/workflows/release-changelog.yml
+++ b/.github/workflows/release-changelog.yml
@@ -2,7 +2,7 @@ name: Release Changelog Notification
 
 on:
   pull_request:
-    types: [ opened, edited ]
+    types: [ opened, synchronize ]
 
 jobs:
   comment:
